プロフィール作成

--- a/index.html
+++ b/index.html
@@ -9,5 +9,33 @@
         </head>
     <body>
         <h1>自己紹介</h1>
+        <h2>名前</h2>
+        <p>髙木柚李 (Takaki Yuri)</p>
+        <h2>所属</h2>
+        <p>東京大学計数工学科システム情報工学コース4年</p>
+        <h2>スキル</h2>
+        <table>
+            <tr>
+                <th>言語</th>
+                <th>ツール</th>
+                <th>期間</th>
+                <th>詳細</th>
+            </tr>
+            <tr>
+                <th>Python</th>
+                <th>2020/05~</th>
+                <th>tkinterを用いたGUI設計, numpyとmaplotlibを用いた数値シミュレーション</th>
+            </tr>
+            <tr>
+                <th>Django</th>
+                <th>2023/02~</th>
+                <th>ゲストハウスアプリの作成</th>
+            </tr>
+            <tr>
+                <th>laravel</th>
+                <th>2022/09~</th>
+                <th>メンター業務</th>
+            </tr>
+        </table>
     </body>
 </html>
