--- a/program_list.html
+++ b/program_list.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>ポートフォリオ</title>
+        <title>成果物一覧</title>
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,600" rel="stylesheet">
         </head>
     <body>
-        <h1>自己紹介</h1>
+        <h1>制作した成果物一覧</h1>
     </body>
 </html>
