--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>ポートフォリオ</title>
-        <!-- Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,600" rel="stylesheet">
-        </head>
+        <!--CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    </head>
     <body>
         <h1>自己紹介</h1>
         <h2>名前</h2>
@@ -17,7 +17,6 @@
         <table>
             <tr>
                 <th>言語</th>
-                <th>ツール</th>
                 <th>期間</th>
                 <th>詳細</th>
             </tr>
@@ -35,6 +34,11 @@
                 <th>laravel</th>
                 <th>2022/09~</th>
                 <th>メンター業務</th>
+            </tr>
+            <tr>
+                <th>Github</th>
+                <th>2022/08~</th>
+                <th>ブランチ管理、コンフリクトの解消</th>
             </tr>
         </table>
     </body>
