--- a/index.html
+++ b/index.html
@@ -4,41 +4,80 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>ポートフォリオ</title>
+        <!--jQuery-->
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <!--CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     </head>
     <body>
+        <script src="header.js"></script>
+        <script>header();</script>
         <h1>自己紹介</h1>
         <h2>名前</h2>
         <p>髙木柚李 (Takaki Yuri)</p>
         <h2>所属</h2>
         <p>東京大学計数工学科システム情報工学コース4年</p>
         <h2>スキル</h2>
-        <table>
+        <table class="table table-striped ">
             <tr>
                 <th>言語</th>
                 <th>期間</th>
                 <th>詳細</th>
             </tr>
             <tr>
-                <th>Python</th>
-                <th>2020/05~</th>
-                <th>tkinterを用いたGUI設計, numpyとmaplotlibを用いた数値シミュレーション</th>
+                <td>Python</td>
+                <td>2020/05~</td>
+                <td>学習機能付きオセロ(ローカル版)</td>
             </tr>
             <tr>
-                <th>Django</th>
-                <th>2023/02~</th>
-                <th>ゲストハウスアプリの作成</th>
+                <td>Django</td>
+                <td>2023/02~</td>
+                <td>ゲストハウスアプリの作成</td>
             </tr>
             <tr>
-                <th>laravel</th>
-                <th>2022/09~</th>
-                <th>メンター業務</th>
+                <td>javascript / Ajax</td>
+                <td>2023/03~</td>
+                <td>対戦機能付きオセロ(オンライン版)</td>
             </tr>
             <tr>
-                <th>Github</th>
-                <th>2022/08~</th>
-                <th>ブランチ管理、コンフリクトの解消</th>
+                <td>laravel / php</td>
+                <td>2022/09~</td>
+                <td>簡単な掲示板アプリの作成</td>
+            </tr>
+            <tr>
+                <td>Github</td>
+                <td>2022/08~</td>
+                <td>ブランチ管理、コンフリクトの解消</td>
+            </tr>
+            <tr>
+                <td>MySQL(mariaDB)</td>
+                <td>2022/09~</td>
+                <td>メンター業務</td>
+            </tr>
+            <tr>
+                <td>MATLAB</td>
+                <td>2021/09~</td>
+                <td>実験等の数値シミュレーション</td>
+            </tr>
+            <tr>
+                <td>C, C++</td>
+                <td>2022/04~</td>
+                <td>大学の講義で使用</td>
+            </tr>
+            <tr>
+                <td>アルゴリズム</td>
+                <td>2021/09~</td>
+                <td>線形計画法、ニュートン法、動的計画法、二分探索、計算量の理解、最短路探索</td>
+            </tr>
+            <tr>
+                <td>数学</td>
+                <td>2021/09~</td>
+                <td>講義レベルの微分積分学、線形代数学、統計学、解析学、最適化理論</td>
+            </tr>
+            <tr>
+                <td>情報学</td>
+                <td>2021/09~</td>
+                <td>信号処理、特異値分解、コンピュータアーキテクチャ、情報理論、ネットワークについての基礎知識</td>
             </tr>
         </table>
     </body>
