--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>header</title>
-        <!--jQuery-->>
+        <!--jQuery-->
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <!--CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
