--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <!--CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+        <!--Javascript-->
+        <script src="header.js"></script>
     </head>
     <body>
+        <div id="header"></div>
+        <script>header();</script>
         <h1>自己紹介</h1>
         <h2>名前</h2>
         <p>髙木柚李 (Takaki Yuri)</p>
@@ -78,7 +82,5 @@
                 <td>信号処理、特異値分解、コンピュータアーキテクチャ、情報理論、ネットワークについての基礎知識</td>
             </tr>
         </table>
-        <script src="header.js"></script>
-        <script>header();</script>
     </body>
 </html>
