--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <body>
         <div id="header"></div>
         <script>header();</script>
+        変更済み
         <h1>自己紹介</h1>
         <h2>名前</h2>
         <p>髙木柚李 (Takaki Yuri)</p>
