--- a/header.html
+++ b/header.html
@@ -10,6 +10,6 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     </head>
     <body>
-        <header>ヘッダー部分です</header>
+        <header>ヘッダー部分です 変更済み</header>
     </body>
 </html>
