--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     </head>
     <body>
         <div id="header"></div>
-        <script>header();</script>
+        <script>
+            $(function(){
+                $('#header').load('./header.html'); // #headerにheader.htmlを読み込む
+            });
+        </script>
         <h1>自己紹介</h1>
         <h2>名前</h2>
         <p>髙木柚李 (Takaki Yuri)</p>
