--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                 <td>ゲストハウスアプリの作成</td>
             </tr>
             <tr>
+                <td>HTML, CSS</td>
+                <td>2023/08~</td>
+                <td>このポートフォリオサイトを一週間で作成する程度</td>
+            </tr>
+            <tr>
                 <td>javascript / Ajax</td>
                 <td>2023/03~</td>
                 <td>対戦機能付きオセロ(オンライン版)</td>
