--- a/header.html
+++ b/header.html
@@ -10,6 +10,22 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     </head>
     <body>
-        <header>ヘッダー部分です 変更済みだよ</header>
+        <header>
+            <nav class="navbar navbar-light bg-light">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Top</a>
+                </div>
+            </nav>
+            <nav class="navbar navbar-light bg-light">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="/program_list.html">works</a>
+                </div>
+            </nav>
+            <nav class="navbar navbar-light bg-light">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Contact</a>
+                </div>
+            </nav>
+        </header>
     </body>
 </html>
