--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 $('#header').load('./header.html'); // #headerにheader.htmlを読み込む
             });
         </script>
-        <h1>自己紹介</h1>
+        <h1>プロフィール</h1>
         <h2>名前</h2>
         <p>髙木柚李 (Takaki Yuri)</p>
         <h2>所属</h2>
@@ -43,7 +43,7 @@
             <tr>
                 <td>HTML, CSS</td>
                 <td>2023/08~</td>
-                <td>このポートフォリオサイトを一週間で作成する程度</td>
+                <td>このポートフォリオを作成する程度</td>
             </tr>
             <tr>
                 <td>javascript / Ajax</td>
