--- a/header.html
+++ b/header.html
@@ -11,17 +11,17 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-light bg-light">
+            <nav class="navbar navbar-light bg-light d-flex border">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#">Top</a>
                 </div>
             </nav>
-            <nav class="navbar navbar-light bg-light">
+            <nav class="navbar navbar-light bg-light d-flex border">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="/program_list.html">works</a>
                 </div>
             </nav>
-            <nav class="navbar navbar-light bg-light">
+            <nav class="navbar navbar-light bg-light d-flex border">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#">Contact</a>
                 </div>
