--- a/header.html
+++ b/header.html
@@ -11,19 +11,11 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-light bg-light d-flex border">
+            <nav class="navbar navbar-light bg-light d-flex">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Top</a>
-                </div>
-            </nav>
-            <nav class="navbar navbar-light bg-light d-flex border">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="/program_list.html">works</a>
-                </div>
-            </nav>
-            <nav class="navbar navbar-light bg-light d-flex border">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Contact</a>
+                  <a class="navbar-brand" href="index.html">Top</a>
+                  <a class="navbar-brand" href="program_list.html">works</a>
+                  <a class="navbar-brand" href="contact.html">Contact</a>
                 </div>
             </nav>
         </header>
