--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <tr>
                 <td>Django</td>
                 <td>2023/02~</td>
-                <td>ゲストハウスアプリの作成</td>
+                <td>ゲストハウスアプリ</td>
             </tr>
             <tr>
                 <td>HTML, CSS</td>
@@ -48,7 +48,7 @@
             <tr>
                 <td>javascript / Ajax</td>
                 <td>2023/03~</td>
-                <td>対戦機能付きオセロ(オンライン版)</td>
+                <td>対戦機能付きオセロ(webアプリ版)</td>
             </tr>
             <tr>
                 <td>laravel / php</td>
@@ -64,6 +64,11 @@
                 <td>MySQL(mariaDB)</td>
                 <td>2022/09~</td>
                 <td>メンター業務</td>
+            </tr>
+            <tr>
+                <td>Docker</td>
+                <td>2023/02~</td>
+                <td>仮想環境上での開発</td>
             </tr>
             <tr>
                 <td>MATLAB</td>
