--- a/program_list.html
+++ b/program_list.html
@@ -9,5 +9,11 @@
         </head>
     <body>
         <h1>制作した成果物一覧</h1>
+        <h2>学習機能付きオセロ(ローカル版)</h2>
+        <a href="https://github.com/T08Y02/oserou_Reversi">github</p>
+        <h2>対戦機能付きオセロ(webアプリ版)</h2>
+        <a href="https://github.com/T08Y02/oserou_django">github(製作中)</a>
+        <h2>ゲストハウスアプリ</h2>
+        <a href="https://github.com/hiroki-yod/guest-house-app">github</a>
     </body>
 </html>
