--- a/header.html
+++ b/header.html
@@ -17,9 +17,10 @@
             });
         </script>
         <header>
+            <img width="100%" height="10%" src="img/00017.png">
             <nav class="navbar navbar-light bg-light d-flex">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="index.html">Top</a>
+                  <a class="navbar-brand" href="index.html">About Me</a>
                   <a class="navbar-brand" href="program_list.html">works</a>
                   <a class="navbar-brand" href="contact.html">Contact</a>
                 </div>
