--- a/header.html
+++ b/header.html
@@ -10,18 +10,13 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     </head>
     <body>
-        <div id="header"></div>
-        <script>
-            $(function(){
-                $('#header').load('./header.html'); // #headerにheader.htmlを読み込む
-            });
-        </script>
         <header>
             <img width="100%" height="10%" src="img/00017.png">
             <nav class="navbar navbar-light bg-light d-flex">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="index.html">About Me</a>
-                  <a class="navbar-brand" href="program_list.html">works</a>
+                  <a class="navbar-brand" href="program_list.html">Works</a>
+                  <a class="navbar-brand" href="interests.html">Interests</a>
                   <a class="navbar-brand" href="contact.html">Contact</a>
                 </div>
             </nav>
