--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <p>髙木柚李 (Takaki Yuri)</p>
         <h2>所属</h2>
         <p>東京大学計数工学科システム情報工学コース4年</p>
+        <p>レバテックカレッジメンター</p>
         <h2>スキル</h2>
         <table class="table table-striped ">
             <tr>
@@ -43,7 +44,7 @@
             <tr>
                 <td>HTML, CSS</td>
                 <td>2023/08~</td>
-                <td>このポートフォリオを作成する程度</td>
+                <td>このポートフォリオを作成する程度のスキル</td>
             </tr>
             <tr>
                 <td>javascript / Ajax</td>
