--- a/interests.html
+++ b/interests.html
@@ -19,7 +19,10 @@
             });
         </script>
         <h2>webアプリを学ぶモチベーション</h2>
-        <p></p>
+        <p>直接目の前で動いてワクワクするものを作りたかったので、web関連の技術を始めました。<br>
+            大学でプログラミングを学ぶ中で、自分が学んだアルゴリズムや数学的な知識を<br>
+            自分の手で形にできるようになりたいと強く感じたことが、私の学習の原動力です。<br>
+        </p>
 
         <h2>PGスクールのメンターとして働くということ</h2>
         <p></p>
