--- a/interests.html
+++ b/interests.html
@@ -7,28 +7,27 @@
         <!--jQuery-->
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <!--CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous" />
         <!--Javascript-->
         <script src="header.js"></script>
     </head>
     <body>
-        <div id="header"></div>
-        <script>
-            $(function(){
-                $('#header').load('./header.html'); // #headerにheader.htmlを読み込む
-            });
-        </script>
-        <h2>webアプリを学ぶモチベーション</h2>
-        <p>直接目の前で動いてワクワクするものを作りたかったので、web関連の技術を始めました。<br>
-            大学でプログラミングを学ぶ中で、自分が学んだアルゴリズムや数学的な知識を<br>
-            自分の手で形にできるようになりたいと強く感じたことが、私の学習の原動力です。<br>
-        </p>
+        <div class = "p-5">
+            <div id="header"></div>
+            <script>
+                $(function(){
+                    $('#header').load('./header.html'); // #headerにheader.htmlを読み込む
+                });
+            </script>
+            <h2>webアプリを学ぶモチベーション</h2>
+            <p>直接目の前で動いてワクワクするものを作りたかったので、web関連の技術を始めました。<br>
+                大学でプログラミングを学ぶ中で、自分が学んだアルゴリズムや数学的な知識を<br>
+                自分の手で形にできるようになりたいと強く感じたことが、私の学習の原動力です。<br>
+            </p>
 
-        <h2>PGスクールのメンターとして働くということ</h2>
-        <p></p>
+            <h2>PGスクールのメンターとして働くということ</h2>
+            <p></p>
 
-        <h2>数学とプログラミング</h2>
-        <p></p>
-
+        </div>
     </body>
 </html>
