--- a/contact.html
+++ b/contact.html
@@ -7,21 +7,23 @@
         <!--jQuery-->
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <!--CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous" />
     </head>
     <body>
-        <div id="header"></div>
-        <script>
-            $(function(){
-                $('#header').load('./header.html'); // #headerにheader.htmlを読み込む
-            });
-        </script>
-        <h1>連絡先</h1>
-        <h2>メールアドレス：</h2>
-        <p>pon9q9@gmail.com</p>
-        <h2>github：</h2>
-        <p>https://github.com/T08Y02</p>
-        <h2>Qiita：</h2>
-        <p>https://qiita.com/T08Y02</p>
+        <div class = "p-5">
+            <div id="header"></div>
+            <script>
+                $(function(){
+                    $('#header').load('./header.html'); // #headerにheader.htmlを読み込む
+                });
+            </script>
+            <h1>連絡先</h1>
+            <h2>メールアドレス：</h2>
+            <p>pon9q9@gmail.com</p>
+            <h2>github：</h2>
+            <p>https://github.com/T08Y02</p>
+            <h2>Qiita：</h2>
+            <p>https://qiita.com/T08Y02</p>
+        </div>
     </body>
 </html>
