--- a/program_list.html
+++ b/program_list.html
@@ -7,31 +7,33 @@
         <!--jQuery-->
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <!--CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous" />
         </head>
     <body>
-        <div id="header"></div>
-        <script>
-            $(function(){
-                $('#header').load('./header.html'); // #headerにheader.htmlを読み込む
-            });
-        </script>
-        <h1>制作した成果物一覧</h1>
-        <h3>学習機能付きオセロ(ローカル版)</h2>
-        <a href="https://github.com/T08Y02/oserou_Reversi">github</a>
-        <div class = "container">
-            <div class="col-lg-4">
-                <p>・対戦の様子</p>
-                <video controls width="300" height="200" src="movie/oserou_vscpu.mp4"></video>
+        <div class = "p-5">
+            <div id="header"></div>
+            <script>
+                $(function(){
+                    $('#header').load('./header.html'); // #headerにheader.htmlを読み込む
+                });
+            </script>
+            <h1>制作した成果物一覧</h1>
+            <h3>学習機能付きオセロ(ローカル版)</h2>
+            <a href="https://github.com/T08Y02/oserou_Reversi">github</a>
+            <div class = "container">
+                <div class="col-lg-4">
+                    <p>・対戦の様子</p>
+                    <video controls width="300" height="200" src="movie/oserou_vscpu.mp4"></video>
+                </div>
+                <div class="col-lg-4">
+                    <p>・学習の様子</p>
+                    <video controls width="300" height="200" src="movie/oserou_forlearn.mp4"></video>
+                </div>
             </div>
-            <div class="col-lg-4">
-                <p>・学習の様子</p>
-                <video controls width="300" height="200" src="movie/oserou_forlearn.mp4"></video>
-            </div>
+            <h2>対戦機能付きオセロ(webアプリ版)</h2>
+            <a href="https://github.com/T08Y02/oserou_django">github(製作中)</a>
+            <h2>ゲストハウスアプリ</h2>
+            <a href="https://github.com/hiroki-yod/guest-house-app">github</a>
         </div>
-        <h2>対戦機能付きオセロ(webアプリ版)</h2>
-        <a href="https://github.com/T08Y02/oserou_django">github(製作中)</a>
-        <h2>ゲストハウスアプリ</h2>
-        <a href="https://github.com/hiroki-yod/guest-house-app">github</a>
     </body>
 </html>
