--- a/header.html
+++ b/header.html
@@ -12,8 +12,8 @@
     <body>
         <header>
             <img width="100%" height="10%" src="img/00017.png">
-            <nav class="navbar navbar-light bg-light d-flex">
-                <div class="container-fluid">
+            <nav class="navbar navbar-light bg-light  d-flex ">
+                <div class="container-fluid justify-content-start">
                   <a class="navbar-brand" href="index.html">About Me</a>
                   <a class="navbar-brand" href="program_list.html">Works</a>
                   <a class="navbar-brand" href="interests.html">Interests</a>
