--- a/program_list.html
+++ b/program_list.html
@@ -20,14 +20,16 @@
             <h1>制作した成果物一覧</h1>
             <h3>学習機能付きオセロ(ローカル版)</h2>
             <a href="https://github.com/T08Y02/oserou_Reversi">github</a>
-            <div class = "container">
-                <div class="col-lg-4">
-                    <p>・対戦の様子</p>
-                    <video controls width="300" height="200" src="movie/oserou_vscpu.mp4"></video>
-                </div>
-                <div class="col-lg-4">
-                    <p>・学習の様子</p>
-                    <video controls width="300" height="200" src="movie/oserou_forlearn.mp4"></video>
+            <div class = "container-fluid">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <p>・対戦の様子</p>
+                        <video controls width="300" height="200" src="movie/oserou_vscpu.mp4"></video>
+                    </div>
+                    <div class="col-lg-4">
+                        <p>・学習の様子</p>
+                        <video controls width="300" height="200" src="movie/oserou_forlearn.mp4"></video>
+                    </div>
                 </div>
             </div>
             <h2>対戦機能付きオセロ(webアプリ版)</h2>
