--- a/program_list.html
+++ b/program_list.html
@@ -33,6 +33,10 @@
                 </div>
             </div>
             <h2>対戦機能付きオセロ(webアプリ版)</h2>
+            <div class="col-lg-4">
+                <p>・対戦の様子</p>
+                <video controls width="300" height="200" src="movie/oserou_web.mp4"></video>
+            </div>
             <a href="https://github.com/T08Y02/oserou_django">github(製作中)</a>
             <h2>ゲストハウスアプリ</h2>
             <a href="https://github.com/hiroki-yod/guest-house-app">github</a>
