--- a/interests.html
+++ b/interests.html
@@ -24,9 +24,18 @@
                 大学でプログラミングを学ぶ中で、自分が学んだアルゴリズムや数学的な知識を<br>
                 自分の手で形にできるようになりたいと強く感じたことが、私の学習の原動力です。<br>
             </p>
+            <a href= "#">read more</a>
 
             <h2>PGスクールのメンターとして働くということ</h2>
-            <p></p>
+            <p>就活向けプログラミングスクールのメンターとして働き出して半年になります。<br>
+                スクールの学生さんはプログラミング未経験の方が大半を占めます。<br>
+                そのような学生さんに、プログラミングの楽しさを少しでも伝えることを目指して活動しています。<br>
+                <br>
+                一方、受講する学生さんの中には、プログラミング自体というよりプログラミングを活用した就活の方に主眼を置く方も多くいます。<br>
+                さまざまな学生さんと向き合う中で、プログラマとしての働き方について考えさせられることも数多くあり、<br>
+                自身も26卒としての就活を見据える中、日々勉強を重ねています。<br>
+            </p>
+            <a href= "#">read more</a>
 
         </div>
     </body>
