ゲストハウスアプリへの動線

--- a/program_list.html
+++ b/program_list.html
@@ -39,6 +39,10 @@
             </div>
             <a href="https://github.com/T08Y02/oserou_django">github(製作中)</a>
             <h2>ゲストハウスアプリ</h2>
+            <div class="col-lg-4">
+                <p>・操作方法紹介</p>
+                <video controls width="300" height="200" src="movie/guesthouse.mp4"></video>
+            </div>
             <a href="https://github.com/hiroki-yod/guest-house-app">github</a>
         </div>
     </body>
