--- a/interests.html
+++ b/interests.html
@@ -24,7 +24,6 @@
                 大学でプログラミングを学ぶ中で、自分が学んだアルゴリズムや数学的な知識を<br>
                 自分の手で形にできるようになりたいと強く感じたことが、私の学習の原動力です。<br>
             </p>
-            <a href= "#">read more</a>
 
             <h2>PGスクールのメンターとして働くということ</h2>
             <p>就活向けプログラミングスクールのメンターとして働き出して半年になります。<br>
@@ -35,7 +34,13 @@
                 さまざまな学生さんと向き合う中で、プログラマとしての働き方について考えさせられることも数多くあり、<br>
                 自身も26卒としての就活を見据える中、日々勉強を重ねています。<br>
             </p>
-            <a href= "#">read more</a>
+
+            <h2>Qiita</h2>
+            <p>
+                生成系AI「StableDiffusion」をローカルPCのdocker仮想環境上で動かす方法をまとめました。
+                <a href="https://qiita.com/T08Y02/items/12cfecd20b3ec442880a">「dockerでStableDiffusionを動かしてみる」</a>
+            </p>
+            
 
         </div>
     </body>
