--- a/program_list.html
+++ b/program_list.html
@@ -18,7 +18,7 @@
                 });
             </script>
             <h1>制作した成果物一覧</h1>
-            <h3>学習機能付きオセロ(ローカル版)</h2>
+            <h3 class="pt-4">学習機能付きオセロ(ローカル版)</h2>
             <a href="https://github.com/T08Y02/oserou_Reversi">github</a>
             <div class = "container-fluid">
                 <div class="row">
@@ -32,13 +32,13 @@
                     </div>
                 </div>
             </div>
-            <h2>対戦機能付きオセロ(webアプリ版)</h2>
+            <h3 class="pt-4">対戦機能付きオセロ(webアプリ版)</h3>
             <div class="col-lg-4">
                 <p>・対戦の様子</p>
                 <video controls width="300" height="200" src="movie/oserou_web.mp4"></video>
             </div>
             <a href="https://github.com/T08Y02/oserou_django">github(製作中)</a>
-            <h2>ゲストハウスアプリ</h2>
+            <h3 class="pt-4">ゲストハウスアプリ</h3>
             <div class="col-lg-4">
                 <p>・操作方法紹介</p>
                 <video controls width="300" height="200" src="movie/guesthouse.mp4"></video>
