--- a/program_list.html
+++ b/program_list.html
@@ -45,6 +45,7 @@
                 <p>・操作方法紹介</p>
                 <video controls width="300" height="200" src="movie/guesthouse.mp4"></video>
             </div>
+            <a href="https://drive.google.com/file/d/1onvNrjy9bWhST2ilGw4ZfQ0DInDuVcHk/view?usp=sharing">紹介用PDF</a>
             <a href="https://github.com/hiroki-yod/guest-house-app">github</a>
             <br>
         </div>
