--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <tr>
                     <td>Github</td>
                     <td>2022/08~</td>
-                    <td>ブランチ管理、コンフリクトの解消</td>
+                    <td>ブランチ管理、コンフリクトの解消がある。チーム開発の経験あり。本番環境を用いるような開発経験はなし。</td>
                 </tr>
                 <tr>
                     <td>MySQL(mariaDB)</td>
@@ -73,6 +73,21 @@
                     <td>仮想環境上での開発</td>
                 </tr>
                 <tr>
+                    <td>Next.js</td>
+                    <td>2023/08~</td>
+                    <td>現在成果物作成中(tsundocker)</td>
+                </tr>
+                <tr>
+                    <td>機械学習</td>
+                    <td>2023/06~</td>
+                    <td>Q学習を用いた4×4オセロの実装</td>
+                </tr>
+                <tr>
+                    <td>アルゴリズム</td>
+                    <td>2021/09~</td>
+                    <td>線形計画法、ニュートン法、動的計画法、二分探索、計算量の理解、最短路探索</td>
+                </tr>
+                <tr>
                     <td>MATLAB</td>
                     <td>2021/09~</td>
                     <td>実験等の数値シミュレーション</td>
@@ -83,9 +98,9 @@
                     <td>大学の講義で使用</td>
                 </tr>
                 <tr>
-                    <td>アルゴリズム</td>
-                    <td>2021/09~</td>
-                    <td>線形計画法、ニュートン法、動的計画法、二分探索、計算量の理解、最短路探索</td>
+                    <td>ROS2</td>
+                    <td>2023/06~</td>
+                    <td>大学の研究室で使用</td>
                 </tr>
                 <tr>
                     <td>数学</td>
