--- a/program_list.html
+++ b/program_list.html
@@ -40,7 +40,7 @@
             </div>
             <a href="https://github.com/T08Y02/oserou_django">github(製作中)</a>
             <br>
-            <h3 class="pt-4">ゲストハウスアプリ</h3>
+            <h3 class="pt-4">ゲストハウスアプリ(共同制作、バックエンドのDjango部分を担当)</h3>
             <div class="col-lg-4">
                 <p>・操作方法紹介</p>
                 <video controls width="300" height="200" src="movie/guesthouse.mp4"></video>
