--- a/program_list.html
+++ b/program_list.html
@@ -48,6 +48,31 @@
             <a href="https://drive.google.com/file/d/1onvNrjy9bWhST2ilGw4ZfQ0DInDuVcHk/view?usp=sharing">紹介用PDF</a>
             <a href="https://github.com/hiroki-yod/guest-house-app">github</a>
             <br>
+
+            <br>
+                <h3 class="pt-4">機械学習オセロ</h3>
+                <div class="col-lg-4">
+                    <p>・操作の様子</p>
+                    <video controls width="300" height="200" src="movie/qplay.mp4"></video>
+                </div>
+                <a href="https://github.com/T08Y02/oserou_q">github</a>
+            <br>
+            <br>
+                <h3 class="pt-4">かがり火</h3>
+                <div class="col-lg-4">
+                    <p>・操作の様子</p>
+                    <video controls width="300" height="200" src="movie/kagaribi.mp4"></video>
+                </div>
+                <a href="https://github.com/shoto-kai/kagaribi">github</a>
+            <br>
+            <br>
+                <h3 class="pt-4">Urban Palette</h3>
+                <div class="col-lg-4">
+                    <p>・操作の様子</p>
+                    <video controls width="300" height="200" src="movie/Urbanpalette.mp4"></video>
+                </div>
+                <a href="https://github.com/shoto-kai/Urban-Palette">github</a>
+            <br>
         </div>
     </body>
 </html>
