--- a/program_list.html
+++ b/program_list.html
@@ -19,6 +19,9 @@
             </script>
             <h1>制作した成果物一覧</h1>
             <h3 class="pt-4">学習機能付きオセロ(ローカル版)</h2>
+            <p>パターン分類して教師あり学習的なことを行うことにトライしました。
+                <br>
+                まだ機械学習の知識が浅いうちに実装したため有効ではない部分もあります。</p>
             <div class = "container-fluid">
                 <div class="row">
                     <div class="col-lg-4">
@@ -34,19 +37,49 @@
             <a href="https://github.com/T08Y02/oserou_Reversi">github</a>
             <br>
             <h3 class="pt-4">対戦機能付きオセロ(webアプリ版)</h3>
+            <p>対戦型オセロをWebアプリで実装しました。一画面で交互に操作する想定で、ネットワーク対戦は未実装です。</p>
             <div class="col-lg-4">
                 <p>・対戦の様子</p>
                 <video controls width="300" height="200" src="movie/oserou_web.mp4"></video>
             </div>
             <a href="https://github.com/T08Y02/oserou_django">github(製作中)</a>
             <br>
-            <h3 class="pt-4">ゲストハウスアプリ(共同制作、バックエンドのDjango部分を担当)</h3>
+            <h3 class="pt-4">ゲストハウスアプリ</h3>
+            <p>ゲストハウスの予約アプリを共同開発しました。バックエンドのDjango部分を担当しました。</p>
             <div class="col-lg-4">
                 <p>・操作方法紹介</p>
                 <video controls width="300" height="200" src="movie/guesthouse.mp4"></video>
             </div>
             <a href="https://drive.google.com/file/d/1onvNrjy9bWhST2ilGw4ZfQ0DInDuVcHk/view?usp=sharing">紹介用PDF</a>
             <a href="https://github.com/hiroki-yod/guest-house-app">github</a>
+            <br>
+
+            <br>
+                <h3 class="pt-4">機械学習オセロ</h3>
+                <p>強化学習の一種であるQ学習を用いてオセロAIを実装しました。</p>
+                <div class="col-lg-4">
+                    <p>・操作の様子</p>
+                    <video controls width="300" height="200" src="movie/qplay.mp4"></video>
+                </div>
+                <a href="https://github.com/T08Y02/oserou_q">github</a>
+            <br>
+            <br>
+                <h3 class="pt-4">かがり火</h3>
+                <p>音をユーザ同士で共有するアプリを作りました。</p>
+                <div class="col-lg-4">
+                    <p>・操作の様子</p>
+                    <video controls width="300" height="200" src="movie/kagaribi.mp4"></video>
+                </div>
+                <a href="https://github.com/shoto-kai/kagaribi">github</a>
+            <br>
+            <br>
+                <h3 class="pt-4">Urban Palette</h3>
+                <p>渋谷のビルに、付近のインスタ投稿の画像を貼り付けました。</p>
+                <div class="col-lg-4">
+                    <p>・操作の様子</p>
+                    <video controls width="300" height="200" src="movie/Urbanpalette.mp4"></video>
+                </div>
+                <a href="https://github.com/shoto-kai/Urban-Palette">github</a>
             <br>
         </div>
     </body>
