--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <h2>所属</h2>
             <p>東京大学計数工学科システム情報工学コース4年</p>
             <p>PGスクール「レバテックカレッジ」メンター</p>
+            <p>WED株式会社にてインターン中</p>
             <h2>スキル</h2>
             <table class="table table-striped w-75">
                 <tr>
@@ -43,19 +44,24 @@
                     <td>ゲストハウスアプリ</td>
                 </tr>
                 <tr>
-                    <td>HTML, CSS</td>
-                    <td>2023/08~</td>
-                    <td>このポートフォリオを作成する程度のスキル</td>
-                </tr>
-                <tr>
-                    <td>javascript / Ajax</td>
-                    <td>2023/03~</td>
-                    <td>対戦機能付きオセロ(webアプリ版)</td>
-                </tr>
-                <tr>
                     <td>laravel / php</td>
                     <td>2022/09~</td>
                     <td>簡単な掲示板アプリの作成</td>
+                </tr>
+                <tr>
+                    <td>強化学習</td>
+                    <td>2023/06~</td>
+                    <td>Q学習を用いた4×4オセロの実装/DQN(卒論テーマ)</td>
+                </tr>
+                <tr>
+                    <td>DNN</td>
+                    <td>2023/08~</td>
+                    <td>コーギーと食パンを見分けるDNN</td>
+                </tr>
+                <tr>
+                    <td>マーケティングデータ分析</td>
+                    <td>2023/12~</td>
+                    <td>実務インターン中</td>
                 </tr>
                 <tr>
                     <td>Github</td>
@@ -78,9 +84,14 @@
                     <td>現在成果物作成中(tsundocker)</td>
                 </tr>
                 <tr>
-                    <td>機械学習</td>
-                    <td>2023/06~</td>
-                    <td>Q学習を用いた4×4オセロの実装</td>
+                    <td>HTML, CSS</td>
+                    <td>2023/08~</td>
+                    <td>メンター業務</td>
+                </tr>
+                <tr>
+                    <td>javascript</td>
+                    <td>2023/03~</td>
+                    <td>対戦機能付きオセロ(webアプリ版)</td>
                 </tr>
                 <tr>
                     <td>アルゴリズム</td>
@@ -98,19 +109,19 @@
                     <td>大学の講義で使用</td>
                 </tr>
                 <tr>
-                    <td>ROS2</td>
+                    <td>ROS 2</td>
                     <td>2023/06~</td>
                     <td>大学の研究室で使用</td>
                 </tr>
                 <tr>
                     <td>数学</td>
                     <td>2021/09~</td>
-                    <td>講義レベルの微分積分学、線形代数学、統計学、解析学、最適化理論</td>
+                    <td>講義レベルの微分積分学、線形代数学、統計学、解析学、最適化理論、確率論、機械学習</td>
                 </tr>
                 <tr>
                     <td>情報学</td>
                     <td>2021/09~</td>
-                    <td>信号処理、特異値分解、コンピュータアーキテクチャ、情報理論、ネットワークについての基礎知識</td>
+                    <td>信号処理、特異値分解、コンピュータアーキテクチャ、情報理論、ネットワーク通信についての基礎知識、セキュリティ</td>
                 </tr>
             </table>
         </div>
