--- a/interests.html
+++ b/interests.html
@@ -26,7 +26,7 @@
             </p>
 
             <h2>PGスクールのメンターとして働くということ</h2>
-            <p>就活向けプログラミングスクールのメンターとして働き出して半年になります。<br>
+            <p>就活向けプログラミングスクールのメンターとして働き出して一年と少しになります。<br>
                 スクールの学生さんはプログラミング未経験の方が大半を占めます。<br>
                 そのような学生さんに、プログラミングの楽しさを少しでも伝えることを目指して活動しています。<br>
                 <br>
