--- a/program_list.html
+++ b/program_list.html
@@ -35,6 +35,10 @@
                 </div>
             </div>
             <a href="https://github.com/T08Y02/oserou_Reversi">github</a>
+            <h3 class="pt-4">コーギーと食パンを見分けるDNN</h2>
+            <p><img width="300" height="200" src="movie/chb.png"></p>            
+            <a href="https://github.com/T08Y02/ChB_DNN">github</a>
+            
             <br>
             <h3 class="pt-4">対戦機能付きオセロ(webアプリ版)</h3>
             <p>対戦型オセロをWebアプリで実装しました。一画面で交互に操作する想定で、ネットワーク対戦は未実装です。</p>
