--- a/index.html
+++ b/index.html
@@ -39,16 +39,6 @@
                     <td>学習機能付きオセロ(ローカル版)</td>
                 </tr>
                 <tr>
-                    <td>Django</td>
-                    <td>2023/02~</td>
-                    <td>ゲストハウスアプリ</td>
-                </tr>
-                <tr>
-                    <td>laravel / php</td>
-                    <td>2022/09~</td>
-                    <td>簡単な掲示板アプリの作成</td>
-                </tr>
-                <tr>
                     <td>強化学習</td>
                     <td>2023/06~</td>
                     <td>Q学習を用いた4×4オセロの実装/DQN(卒論テーマ)</td>
@@ -64,6 +54,16 @@
                     <td>実務インターン中</td>
                 </tr>
                 <tr>
+                    <td>Django</td>
+                    <td>2023/02~</td>
+                    <td>ゲストハウスアプリ</td>
+                </tr>
+                <tr>
+                    <td>laravel / php</td>
+                    <td>2022/09~</td>
+                    <td>簡単な掲示板アプリの作成、メンター業務</td>
+                </tr>
+                <tr>
                     <td>Github</td>
                     <td>2022/08~</td>
                     <td>ブランチ管理、コンフリクトの解消がある。チーム開発の経験あり。本番環境を用いるような開発経験はなし。</td>
@@ -71,7 +71,7 @@
                 <tr>
                     <td>MySQL(mariaDB)</td>
                     <td>2022/09~</td>
-                    <td>メンター業務</td>
+                    <td>メンター業務、データ関連インターン業務</td>
                 </tr>
                 <tr>
                     <td>Docker</td>
