--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <tr>
                     <td>laravel / php</td>
                     <td>2022/09~</td>
-                    <td>簡単な掲示板アプリの作成、メンター業務</td>
+                    <td>基本的なアプリ作成の経験あり、メンター業務</td>
                 </tr>
                 <tr>
                     <td>Github</td>
